--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </div>
   </body>
 
-  <script type="module" src="/jsdelivr/widget.js"></script>
+  <!-- src="https://cdn.jsdelivr.net/gh/PhanhotboY/profile-card@1.0.1/jsdelivr/widget.js" -->
+  <script type="module" src="./jsdelivr/widget.js"></script>
 </html>
