Update default template

--- a/jsdelivr/cards/default.html
+++ b/jsdelivr/cards/default.html
@@ -68,8 +68,10 @@
 
         <a
           class="follow mb-auto mt-3 pointer-events-auto rounded-md bg-indigo-600 px-2 py-1 text-[0.8125rem] font-semibold text-white hover:bg-indigo-500"
-          href="#"
-        >
+          href="https://github.com/PhanhotboY"
+          target="_blank"
+          rel="noopener"
+          >
           Follow
         </a>
       </div>
